--- a/public/templates/index.dust
+++ b/public/templates/index.dust
@@ -1,5 +1,9 @@
 {>"layouts/master" /}
 
 {<body}
-    <h1>{@pre type="content" key="index.greeting"/}</h1>
+	<div class="jumbotron">
+	  <h1>{@pre type="content" key="index.greeting"/}</h1>
+	  <p>Desc .... </p> 
+	  <p><a href="/register" class="btn btn-primary btn-lg" role="button">REGISTER</a></p>
+	</div>
 {/body}
