--- a/public/css/_views/index.less
+++ b/public/css/_views/index.less
@@ -1,8 +1,10 @@
 .jumbotron {
-	margin:250px auto;
+	margin:5px auto;
 	text-align:center;
 	border-radius:15px;
-	width:700px;
+	width:1003px;
+	height: 667px;
+	background: transparent url('../../img/banner.jpg') no-repeat 0 0;
 }
 header {
 	background-color: #f3f3f3;
@@ -38,4 +40,17 @@ header {
 			margin-left:10px;
 		}
 	}
+}
+.modal-title{
+	color: #468847;
+}
+.smsNumber{
+	font-size: 16px;
+	font-weight: bold;
+	color: #007ac2;
+}
+.code{
+	font-family: courier;
+    font-size: 16px;
+    padding: 0 5px;
 }
